log
Fri 12 May 2023 06:34:53 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
31ee99f
Fri 12 May 2023 06:42:34 PM UTC: 
 heap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  1|3
total_score: 10/70
e0133b3
Fri 12 May 2023 06:44:49 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
8903906
Fri 12 May 2023 06:44:57 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
cf0f8f2
Fri 12 May 2023 06:54:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
c5a8630
Fri 12 May 2023 06:55:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
863103e
Fri 12 May 2023 06:55:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3c732e7
Fri 12 May 2023 06:58:46 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
06f3057
Fri 12 May 2023 07:04:22 PM UTC: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|2
total_score: 20/70
6014c83
Fri 12 May 2023 07:04:47 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
74dcaaa
Sun 14 May 2023 03:11:11 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:59:7: error: unused variable ‘sucesor2’ [-Werror=unused-variable]
   59 |   int sucesor2 = 2;
      |       ^~~~~~~~
heap.c:58:7: error: unused variable ‘sucesor’ [-Werror=unused-variable]
   58 |   int sucesor = 1;
      |       ^~~~~~~
heap.c:57:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   57 |   int pos = 0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
cc19eea
Sun 14 May 2023 03:14:43 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:62:64: error: comparison between pointer and integer [-Werror]
   62 |     if(sucesor2 < pq->size && pq->heapArray[sucesor2].priority > pq->heapArray > pq->heapArray[sucesor].priority) sucesor++;
      |                                                                ^
heap.c:62:64: error: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Werror=parentheses]
   62 |     if(sucesor2 < pq->size && pq->heapArray[sucesor2].priority > pq->heapArray > pq->heapArray[sucesor].priority) sucesor++;
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
heap.c:57:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   57 |   int pos = 0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
cd61492
Sun 14 May 2023 03:17:25 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:62:64: error: comparison between pointer and integer [-Werror]
   62 |     if(sucesor2 < pq->size && pq->heapArray[sucesor2].priority > pq->heapArray > pq->heapArray[sucesor].priority) sucesor++;
      |                                                                ^
heap.c:62:64: error: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Werror=parentheses]
   62 |     if(sucesor2 < pq->size && pq->heapArray[sucesor2].priority > pq->heapArray > pq->heapArray[sucesor].priority) sucesor++;
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1c4cdc1
Sun 14 May 2023 03:24:53 AM UTC: 
 heap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:61:9: error: ‘sucesor’ undeclared (first use in this function)
   61 |   while(sucesor < pq->size){
      |         ^~~~~~~
heap.c:61:9: note: each undeclared identifier is reported only once for each function it appears in
heap.c:62:58: error: comparison between pointer and integer [-Werror]
   62 |     if(hijo2 < pq->size && pq->heapArray[hijo2].priority > pq->heapArray > pq->heapArray[sucesor].priority) sucesor++;
      |                                                          ^
cc1: all warnings being treated as errors
Compilation failed
3841286
Sun 14 May 2023 03:25:19 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:62:58: error: comparison between pointer and integer [-Werror]
   62 |     if(hijo2 < pq->size && pq->heapArray[hijo2].priority > pq->heapArray > pq->heapArray[hijo].priority) hijo++;
      |                                                          ^
heap.c:62:58: error: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Werror=parentheses]
   62 |     if(hijo2 < pq->size && pq->heapArray[hijo2].priority > pq->heapArray > pq->heapArray[hijo].priority) hijo++;
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
03f3cd6
